Avoid scrollbar in DevicesNotFoundView

--- a/packages/vscode-extension/src/webview/views/DevicesNotFoundView.css
+++ b/packages/vscode-extension/src/webview/views/DevicesNotFoundView.css
@@ -45,7 +45,7 @@
   height: 16px;
 }
 
-@media (max-height: 500px) {
+@media (max-height: 510px) {
   .devices-not-found-title {
     margin: 10px;
   }
